# adventofcode

./: .gitignore  fetcher.sh
2015/day01/: day01.raku
2015/day02/: day02.raku
2015/day03/: day03.raku
2015/day04/: day04.pl  day04.raku
2015/day05/: day05.raku
2015/day06/: day06.raku
2015/day07/: day07.raku
2015/day08/: day08.raku
2015/day09/: day09.raku
2015/day10/: day10.raku
2015/day11/: day11.raku
2015/day12/: day12.raku
2015/day13/: day13.raku
2015/day14/: day14.raku
2015/day15/: day15.raku
2015/day17/: day17.raku
2016/day01/: day01.raku
2016/day02/: day02.raku
2016/day03/: day03.raku
2016/day04/: day04.raku
2016/day05/: Cargo.toml  day05.raku
2016/day06/: day06.raku
2016/day07/: day07.raku
2018/day01/: day01.py
2018/day02/: day02.py
2018/day03/: day03.py
2018/day04/: day04.py
2019/day03/: day03.py
2019/day05/: build.zig
2019/day07/: build.zig
2019/day08/: day08.raku
2019/intcode/: build.zig
2019/rust/: Cargo.toml
2021/: utils.pl
2021/day01/: day01.pl  day01.py
2021/day05/: day05.py
2021/day06/: day06.py
2021/day08/: day08.pl
2021/day09/: day09.py
2021/day10/: day10.py
2021/day23/: .gitignore  day23-2.cpp  day23.cpp  meson.build
day02/: day02.pl  day02.py
day03/: day03.py
day04/: day04.py
day07/: day07.py
day08/: day08.pl  day08.py
day14/: day14.py
day15/: day15.py
day16/: day16.pl
day18/: day18.py
day22/: day22-2.py  day22.cpp  day22.lua  day22.py
day23/: day23.cpp  meson.build
day24/: day24-2.cpp  day24.cpp
day25/: day25.cpp  meson.build
scheme/: advent.sls
(+148 files in other folders)
